Alignment fixes

--- a/styles/app.less
+++ b/styles/app.less
@@ -18,6 +18,10 @@
 }
 
 .map {
+
+	img {
+		margin-left: 10%;
+	}
 	@media @mobile {
 		img {
 			display: none;
